--- a/src/static/css/Login/login.css
+++ b/src/static/css/Login/login.css
@@ -1,9 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap');
-
-.register-page{
-    background-color: transparent;
-    height: 85vh;
-}
 .login-box{
     box-shadow: 3px 3px 5px 2px rgba(108, 48, 148, 0.452);   
     border-top-left-radius: 1rem;
@@ -29,14 +24,16 @@
     font-family: 'Mukta', sans-serif;
 }
 
-.card{
+.cardLogin{
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
+    height: 250px;
 }
 
 .login-card-body{
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
+    height: 250px;
 }
 
 .row{
