--- a/src/static/css/Compra/registrar.css
+++ b/src/static/css/Compra/registrar.css
@@ -1,3 +1,6 @@
+.register-page{
+    background-color: transparent;
+}
 .register-box{
     margin-bottom: 5%;
     box-shadow: 3px 3px 5px 2px rgba(108, 48, 148, 0.452);   
