--- a/src/static/css/Productos/productos.css
+++ b/src/static/css/Productos/productos.css
@@ -33,8 +33,8 @@
     padding: 3px;
 }
 /*Todos loas productos*/
-.card{
-    height: 330px;
+.cardp {
+    height: 530px;
 }
 .card-title{
     color: #571b9c;
